Changes the way forecast values are retrieved to check alerts